# leetcode

./: .gitignore  .leetkick.json  package.json
.zed/: settings.json
python/: README.md  pyproject.toml
python/src/problem_0001/: README.md  two_sum.py
python/src/problem_0344/: README.md  reverse_string.py
python/src/problem_1004/: README.md  max_consecutive_ones_iii.py
python/src/problem_1291/: README.md  sequential_digits.py
python/src/problem_1331/: README.md  rank_transform_of_an_array.py
python/tests/problem_0001/: test_two_sum.py
python/tests/problem_0344/: test_reverse_string.py
python/tests/problem_1004/: test_max_consecutive_ones_iii.py
python/tests/problem_1291/: test_sequential_digits.py
python/tests/problem_1331/: test_rank_transform_of_an_array.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/common/: index.ts  list.ts  queue.ts  tree.ts
typescript/problem_0001/: TwoSum.test.ts  TwoSum.ts
typescript/problem_0003/: LongestSubstringWithoutRepeatingCharacters.test.ts  LongestSubstringWithoutRepeatingCharacters.ts  README.md
typescript/problem_0020/: README.md  ValidParentheses.test.ts  ValidParentheses.ts
typescript/problem_0024/: README.md  SwapNodesInPairs.test.ts  SwapNodesInPairs.ts
typescript/problem_0071/: README.md  SimplifyPath.test.ts  SimplifyPath.ts
typescript/problem_0083/: README.md  RemoveDuplicatesFromSortedList.test.ts  RemoveDuplicatesFromSortedList.ts
typescript/problem_0092/: README.md  ReverseLinkedListIi.test.ts  ReverseLinkedListIi.ts
typescript/problem_0098/: README.md  (+2 more)
(+181 files in other folders)
