[project]
name = "leetcode-python"
version = "0.1.0"
description = "LeetCode Python workspace"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "ruff>=0.1.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["src"]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "C4",
  "SIM",
  "RET",
  "ARG",
  "PTH",
  "PL",
  "RUF"
]
